feat(site): add a Code of Conduct page on the website

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -3,7 +3,7 @@ import { Header } from '../modules/header/Header';
 import { Orgas } from '../modules/about/Orgas';
 import { Socials } from '../modules/about/Socials';
 
-<LyonJSHead />
+<LyonJSHead title="LyonJS | À propos" />
 <Header />
 
 <main>
