--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -12,10 +12,10 @@ import { Socials } from '../modules/about/Socials';
   A propos du Lyon JS : la communauté lyonnaise des utilisateurs de JavaScript
 </h1>
 
-## Qu&apos;est ce que le LyonJS ?
+## Qu'est ce que le LyonJS ?
 
 Le LyonJS est un groupe de lyonnais·es qui a pour but de rassembler les utilisateur·rice·s web et JavaScript
-de la ville de Lyon et de ses alentours. Ainsi, nous organisons des réunions d&apos;informations mensuelles
+de la ville de Lyon et de ses alentours. Ainsi, nous organisons des réunions d'informations mensuelles
 ouvertes à tou·te·s et gratuites afin de favoriser les échanges et les rencontres des
 utilisateur·rice·s/développeur·euse·s autour de cette technologie, de ses possibilités, de son avenir.
 
@@ -23,13 +23,13 @@ La première rencontre a eu lieu le 25 octobre 2011. Depuis cette date, les renc
 base (presque 😅) mensuelle.
 
 Chaque mois nous nous retrouvons autour de conférences dont le thème porte sur les technologies web et
-JavaScript en particulier. Nous nous retrouvons ensuite autour d&apos;un buffet en vue d&apos;échanger nos
+JavaScript en particulier. Nous nous retrouvons ensuite autour d'un buffet en vue d'échanger nos
 impressions et de poursuivre la discussion.
 
 Ces évènements peuvent avoir lieu grâce aux sponsors de ce meetup qui nous soutiennent en nous donnant accès à
 leurs bureaux et financent généralement le buffet qui suit les conférences.
 
-Nous organisons également de manière régulière des ApérosJS, qui n&apos;ont pour unique but que de rassembler
+Nous organisons également de manière régulière des ApérosJS, qui n'ont pour unique but que de rassembler
 la communauté dans un lieu lyonnais.
 
 ## Les orgas
@@ -43,7 +43,7 @@ encore expert·e dans le domaine, vous êtes la·le bienvenu·e. Les évènement
 parfois en places limitées.
 
 Nous accueillons très régulièrement des étudiant·e·s lyonnais·es qui viennent rencontrer les «
-professionnels·le·s » de notre communauté. Si votre école souhaite venir ou participer, n&apos;hésitez pas à
+professionnels·le·s » de notre communauté. Si votre école souhaite venir ou participer, n'hésitez pas à
 vous inscrire aux différents meetup.
 
 ## Comment nous rejoindre ?
@@ -60,8 +60,8 @@ Vous avez plein de possibilités pour rejoindre la communauté:
 
 ## Contact
 
-Parce qu&apos;une communauté ne vit que par les discussions et les rencontres régulières de ses membres,
-participez à l&apos;organisation et à la vie de LyonJS sur les différents groupes de discussion et réseaux.
+Parce qu'une communauté ne vit que par les discussions et les rencontres régulières de ses membres,
+participez à l'organisation et à la vie de LyonJS sur les différents groupes de discussion et réseaux.
 
 <Socials />
 
