feat(ui): update the styles of the headings

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -6,9 +6,7 @@ import { Socials } from '../modules/about/Socials';
 
 <main>
 
-<h1 className="text-sm text-gray-400 my-4">
-  A propos du Lyon JS : la communauté lyonnaise des utilisateurs de JavaScript
-</h1>
+# A propos
 
 ## Qu'est ce que le LyonJS ?
 
