--- a/pages/code-de-conduite.mdx
+++ b/pages/code-de-conduite.mdx
@@ -5,7 +5,7 @@ import { LyonJSHead } from '../modules/header/LyonJSHead';
 
 <main>
 
-<h1 className="text-sm text-gray-400 my-4">Code de conduite du LyonJS</h1>
+# Code de conduite
 
 ## Notre engagement
 
