feat(ui): update the styles of the mdx pages

--- a/pages/code-de-conduite.mdx
+++ b/pages/code-de-conduite.mdx
@@ -1,4 +1,3 @@
-import { Header } from '../modules/header/Header';
 import { LyonJSHead } from '../modules/header/LyonJSHead';
 
 <LyonJSHead title="LyonJS | Code de conduite" />
@@ -53,11 +52,15 @@ Tou·te·s les dirigeant·e·s de la communauté sont tenu·e·s de respecter la
 
 Les dirigeant·e·s de communauté suivront ces directives d’application sur l’impact communautaire afin de déterminer les conséquences de toute action qu’ils jugent contraire au présent code de conduite :
 
+<br />
+
 ### 1. Correction
 
 Impact communautaire : utilisation d’un langage inapproprié ou tout autre comportement jugé non professionnel ou indésirable dans la communauté.
 
 Conséquence : un avertissement écrit et privé de la part des dirigeant·e·s de la communauté, clarifiant la nature du non-respect et expliquant pourquoi le comportement était inapproprié. Des excuses publiques peuvent être demandées.
+
+<br />
 
 ### 2. Avertissement
 
@@ -65,11 +68,15 @@ Impact communautaire : un non-respect par un seul incident ou une série d’act
 
 Conséquence : un avertissement avec des conséquences dû à la poursuite du comportement. Aucune interaction avec les personnes concernées, y compris l’interaction non sollicitée avec celles et ceux qui sont chargé·e·s de l’application de ce code de conduite, pendant une période déterminée. Cela comprend le fait d’éviter les interactions dans les espaces communautaires ainsi que sur les canaux externes comme les médias sociaux. Le non-respect de ces conditions peut entraîner un bannissement temporaire ou permanent.
 
+<br />
+
 ### 3. Bannissement temporaire
 
 Impact communautaire : un non-respect grave des normes communautaires, notamment un comportement inapproprié soutenu.
 
 Conséquence : un bannissement temporaire de toutes formes d’interactions ou de communications avec la communauté pendant une période déterminée. Aucune interaction publique ou privée avec les personnes concernées, y compris les interactions non sollicitées avec celles et ceux qui appliquent ce code de conduite, n’est autorisée pendant cette période. Le non-respect de ces conditions peut entraîner un bannissement permanent.
+
+<br />
 
 ### 4. Bannissement permanent
 
@@ -80,6 +87,6 @@ Conséquence : un bannissement permanent de toutes formes d’interactions publi
 ## Attributions
 
 Ce code de conduite est adapté du Contributor Covenant, version 2.0, disponible à [cette adresse](https://www.contributor-covenant.org/version/2/0/code_of_conduct/).
-Il est également adapté de celui défini par l'association [NantesJS](https://nantesjs.org/code-de-conduite/).
+Il est également adapté de celui défini par l'association [NantesJS](https://nantesjs.org/code-de-conduite/) 🙏🏼
 
 </main>
