feat(ui): update the styles of the mdx pages (#60)

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -13,7 +13,7 @@ import { Socials } from '../modules/about/Socials';
 Le LyonJS est un groupe de lyonnais·es qui a pour but de rassembler les utilisateur·rice·s web et JavaScript
 de la ville de Lyon et de ses alentours. Ainsi, nous organisons des réunions d'informations mensuelles
 ouvertes à tou·te·s et gratuites afin de favoriser les échanges et les rencontres des
-utilisateur·rice·s/développeur·euse·s autour de cette technologie, de ses possibilités, de son avenir.
+utilisateur·rice·s/développeur·euse·s autour de cette technologie, de ses possibilités, de son avenir 🦁
 
 La première rencontre a eu lieu le 25 octobre 2011. Depuis cette date, les rencontres se sont faites sur une
 base (presque 😅) mensuelle.
@@ -26,7 +26,7 @@ Ces évènements peuvent avoir lieu grâce aux sponsors de ce meetup qui nous so
 leurs bureaux et financent généralement le buffet qui suit les conférences.
 
 Nous organisons également de manière régulière des ApérosJS, qui n'ont pour unique but que de rassembler
-la communauté dans un lieu lyonnais.
+la communauté dans un lieu lyonnais 🍻
 
 ## Les orgas
 
@@ -40,11 +40,11 @@ parfois en places limitées.
 
 Nous accueillons très régulièrement des étudiant·e·s lyonnais·es qui viennent rencontrer les «
 professionnels·le·s » de notre communauté. Si votre école souhaite venir ou participer, n'hésitez pas à
-vous inscrire aux différents meetup.
+vous inscrire aux différents meetup. 🎓
 
 ## Comment nous rejoindre ?
 
-Vous avez plein de possibilités pour rejoindre la communauté:
+Vous avez plein de possibilités pour rejoindre la communauté :
 
 - [Vous inscrire sur notre groupe meetup](https://www.meetup.com/fr-FR/LyonJS/)
 - Vous inscrire en spectateur à un de nos prochains évènements
@@ -57,7 +57,7 @@ Vous avez plein de possibilités pour rejoindre la communauté:
 ## Contact
 
 Parce qu'une communauté ne vit que par les discussions et les rencontres régulières de ses membres,
-participez à l'organisation et à la vie de LyonJS sur les différents groupes de discussion et réseaux.
+participez à l'organisation et à la vie de LyonJS sur les différents groupes de discussion et réseaux 💌
 
 <Socials />
 
