--- a/pages/code-de-conduite.mdx
+++ b/pages/code-de-conduite.mdx
@@ -1,4 +1,3 @@
-import { Header } from '../modules/header/Header';
 import { LyonJSHead } from '../modules/header/LyonJSHead';
 
 <LyonJSHead title="LyonJS | Code de conduite" />
@@ -80,6 +79,6 @@ Conséquence : un bannissement permanent de toutes formes d’interactions publi
 ## Attributions
 
 Ce code de conduite est adapté du Contributor Covenant, version 2.0, disponible à [cette adresse](https://www.contributor-covenant.org/version/2/0/code_of_conduct/).
-Il est également adapté de celui défini par l'association [NantesJS](https://nantesjs.org/code-de-conduite/).
+Il est également adapté de celui défini par l'association [NantesJS](https://nantesjs.org/code-de-conduite/) 🙏🏼
 
 </main>
