feat(seo): enhance LyonJSHead component

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -2,7 +2,10 @@ import { LyonJSHead } from '../modules/header/LyonJSHead';
 import { Orgas } from '../modules/about/Orgas';
 import { Socials } from '../modules/about/Socials';
 
-<LyonJSHead title="LyonJS | À propos" />
+<LyonJSHead
+  title="LyonJS | À propos"
+  description="Qu'est-ce que LyonJS, comment le meetup est organisé ? Comment participer ? Qui sont les organisateurs ?"
+/>
 
 <main>
 
