--- a/pages/code-de-conduite.mdx
+++ b/pages/code-de-conduite.mdx
@@ -1,6 +1,9 @@
 import { LyonJSHead } from '../modules/header/LyonJSHead';
 
-<LyonJSHead title="LyonJS | Code de conduite" />
+<LyonJSHead
+  title="LyonJS | Code de conduite"
+  description="Code de conduite et réglementation relative aux évènements de l'association LyonJS. Critères et application y sont détaillés"
+/>
 
 <main>
 
