feat(about): add dynamic numbers in about page

--- a/app/a-propos/content.mdx
+++ b/app/a-propos/content.mdx
@@ -1,5 +1,6 @@
 import { Socials } from '../../modules/about/Socials';
 import { Orgas } from '../../modules/about/Orgas';
+import { Numbers } from '../../modules/about/Numbers';
 
 <main>
 
@@ -24,6 +25,10 @@ import { Orgas } from '../../modules/about/Orgas';
 
     Nous organisons également de manière régulière des ApérosJS, qui n'ont pour unique but que de rassembler
     la communauté dans un lieu lyonnais 🍻
+
+    ## Quelques chiffres
+
+    <Numbers />
 
     ## Les orgas
 
