Apply suggestions from code review
Co-authored-by: Mathieu Mure <mathieumure@users.noreply.github.com>

--- a/app/devenir-sponsor/content.mdx
+++ b/app/devenir-sponsor/content.mdx
@@ -5,7 +5,7 @@ import { NextSchedule } from '../../modules/schedule/NextSchedule';
 Vous souhaitez devenir sponsor ?
 Vous vous posez encore la question ?
 
-Vous trouverez normalement toutes les informations dont vous avez le besoin dans cette page.
+Vous trouverez toutes les informations dont vous avez besoin dans cette page.
 Rejoignez les nombreuses entreprises qui ont déjà franchi le pas en nous aidant dans nos actions.
 
 ## Pourquoi sponsoriser ?
@@ -13,7 +13,7 @@ Rejoignez les nombreuses entreprises qui ont déjà franchi le pas en nous aidan
 En tant que sponsor de LyonJS, vous avez l'opportunité de soutenir une communauté dynamique de développeurs à Lyon.
 En plus de promouvoir votre entreprise auprès d'un public engagé, vous contribuez au développement de l'écosystème technologique local.
 En tant que sponsor, vous bénéficiez également de divers avantages, tels que la visibilité lors de nos événements, l'ajout de votre logo sur notre site ainsi qu'un lien vers votre site.
-Cette action vous aidera à encrer votre marque employeur dans la place lyonnaise.
+Cette action vous aidera à ancrer votre marque employeur dans la place lyonnaise.
 
 ## Quand sont prévus nos prochains événements ?
 
@@ -67,4 +67,4 @@ Si vous souhaitez héberger l'un de nos événements, vérifiez que vous pouvez 
 - avoir un rétroprojecteur.
 - avoir au moins une personne de vos équipes présente le soir de l'événement.
 - être assuré pour ce type d'événements.
-- baliser un minimum l'accès à vos locaux pour aider notre communauté à bien trouver le lieu.
+- être capable de baliser l'accès à vos locaux pour aider notre communauté à bien trouver le lieu.
