fix(links): fix cfp link due to conference-hall update

--- a/app/a-propos/content.mdx
+++ b/app/a-propos/content.mdx
@@ -46,7 +46,7 @@ import { Orgas } from '../../modules/about/Orgas';
     - [Vous inscrire sur notre groupe meetup](https://www.meetup.com/fr-FR/LyonJS/)
     - Vous inscrire en spectateur à un de nos prochains évènements
     - Rejoindre la team organisatrice de la communauté en [vous signalant par mail](mailto:contact@lyonjs.org)
-    - Proposer un sujet de conférence dans notre [Call for paper](https://bit.ly/lyonjs-cfp)
+    - Proposer un sujet de conférence dans notre [Call for paper](https://conference-hall.io/lyon-js-meetup)
     - Parler de nos actions dans votre entreprise pour nous aider à trouver plus de Sponsors
     - Convaincre vos collègues de venir participer à un de nos évènements
     - En parler autour de vous !
