feat(page): add page about budget

--- a/app/devenir-sponsor/content.mdx
+++ b/app/devenir-sponsor/content.mdx
@@ -68,3 +68,5 @@ Si vous souhaitez héberger l'un de nos événements, vérifiez que vous pouvez 
 - avoir au moins une personne de vos équipes présente le soir de l'événement.
 - être assuré pour ce type d'événements.
 - être capable de baliser l'accès à vos locaux pour aider notre communauté à bien trouver le lieu.
+
+[**En savoir plus sur les dépenses et le financement de l'association LyonJS**](/budget-et-financement)
