fix: use data JS object for budget rows

--- a/app/budget-et-financement/content.mdx
+++ b/app/budget-et-financement/content.mdx
@@ -1,3 +1,5 @@
+import { BudgetTable } from '../../modules/budget/budgetTable';
+
 # Budget et financement
 
 LyonJS est une association dédiée à la promotion et au développement de la communauté JavaScript à Lyon.
@@ -9,79 +11,7 @@ Voici un aperçu des principales dépenses annuelles de l'association ainsi que 
 
 ## Tableau des dépenses
 
-<table>
-  <thead>
-    <tr>
-      <th>
-        <strong>Dépense</strong>
-      </th>
-      <th>
-        <strong>Description</strong>
-      </th>
-      <th>
-        <strong>Coût</strong>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-        <strong>Abonnement plateforme Meetup</strong>
-      </td>
-      <td>Plateforme pour publier nos événements, 90$ par semestre</td>
-      <td>160€</td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Compte en banque d'association</strong>
-      </td>
-      <td>Compte business associatif sur banque en ligne</td>
-      <td>120€</td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Nom de domaine et hébergement</strong>
-      </td>
-      <td>Actuellement acheté auprès d'OVH</td>
-      <td>XX€</td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Hébergement du site</strong>
-      </td>
-      <td>Offert par Vercel et Clever Cloud</td>
-      <td>0€</td>
-    </tr>
-    <tr>
-      <td>
-        <strong>T-shirt / Hoodies</strong>
-      </td>
-      <td>100€ par personne, on prévoit jusqu'à 2 arrivée dans l'asso par ans</td>
-      <td>200€</td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Assurances</strong>
-      </td>
-      <td>Couverture juridique et responsabilité morale</td>
-      <td>200€</td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Location de salle</strong>
-      </td>
-      <td>Les salles et les lieux de nos événements sont offerts par nos sponsors</td>
-      <td>0€</td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Total</strong>
-      </td>
-      <td></td>
-      <td>XXX€</td>
-    </tr>
-  </tbody>
-</table>
+<BudgetTable />
 
 ## Financement futur par des Sponsors
 
