feat: add speakers

--- a/app/lyonjs-100/content.mdx
+++ b/app/lyonjs-100/content.mdx
@@ -1,5 +1,7 @@
+import { ListOfPeople } from '../../modules/person/ListOfPeople';
 import { Sponsors } from '../../modules/sponsors/Sponsors';
-import { gold, silver, bronze } from '../../data/sponsors-lyonjs100';
+import { gold, silver, bronze } from '../../data/lyonjs100-sponsors';
+import { speakers } from '../../data/lyonjs100-speakers';
 
 # LyonJS 💯
 
@@ -13,6 +15,18 @@ Nous sommes ravis d'annoncer que pour célébrer notre 100ème événement, Lyon
 - **📌 Lieu** : UGC Part dieu
 - **🎟️ Ouverture de la billetterie** : 6 décembre 2024 (sous réserve de la confirmation des derniers sponsors)
 
+## Inscription
+
+L'ouverture de la billetterie est prévue pour le 6 décembre 2024. Assurez-vous de réserver votre place dès que possible, car les places seront limitées !
+
+## Programme
+
+Le programme complet de la journée sera annoncé prochainement. Restez à l'affût pour découvrir les conférences prévues pour cette journée spéciale.
+
+Voici nos premiers speaker pour cet événement :
+
+<ListOfPeople people={speakers} />
+
 ## Sponsors
 
 Nous avons déjà sécurisé 80% de nos sponsors et nous avons jusqu'au 29 novembre 2024 pour finaliser les derniers détails. Si vous êtes intéressé par le sponsoring de cet événement, n'hésitez pas à nous contacter !
@@ -20,14 +34,6 @@ Nous avons déjà sécurisé 80% de nos sponsors et nous avons jusqu'au 29 novem
 <Sponsors title="🥇Sponsors Gold" sponsors={gold} />
 <Sponsors title="🥈Sponsors Silver" sponsors={silver} />
 <Sponsors title="🥉Sponsors Bronze" sponsors={bronze} />
-
-## Programme
-
-Le programme complet de la journée sera annoncé prochainement. Restez à l'affût pour découvrir les conférences, ateliers et autres activités prévues pour cette journée spéciale.
-
-## Inscription
-
-L'ouverture de la billetterie est prévue pour le 6 décembre 2024. Assurez-vous de réserver votre place dès que possible, car les places seront limitées !
 
 ## Contact
 
