--- a/app/lyonjs-100/content.mdx
+++ b/app/lyonjs-100/content.mdx
@@ -6,7 +6,8 @@ import Image from 'next/image';
 import cinema from './cinema.jpg';
 import styles from './LyonJS100.module.css';
 import { ButtonLink } from '../../modules/atoms/button/Button';
-import { Gift } from '../../modules/icons/Gift';
+import { lyonJS100Jobs } from '../../data/lyonjs100-jobs';
+import { ListOfJobs } from '../../modules/jobs/ListOfJobs';
 
 <div className={styles.hero}>
   <Image className={styles.background} src={cinema} width={1200} alt="" />
@@ -54,15 +55,15 @@ Certains de nos sponsors seront présents durant la journée, n'hésitez pas à 
 
 Nos sponsors sont également à la recherche de nouveaux talents, alors n'hésitez pas à consulter les offres d'emploi disponibles sur notre site.
 
-<div className={styles.cta}>
-  <ButtonLink href="/lyonjs-100/job-board">
-    Les offres d'emploi <Gift />
-  </ButtonLink>
-</div>
-
 <Sponsors title="🥇Sponsors Gold" sponsors={gold} />
 <Sponsors title="🥈Sponsors Silver" sponsors={silver} />
 <Sponsors title="🥉Sponsors Bronze" sponsors={bronze} />
+
+## Recrutement
+
+Nos sponsors ont des offres d'emploi à vous proposer. N'hésites pas à les consulter, postuler ou les contacters si vous êtes intéressé·es.
+
+<ListOfJobs jobs={lyonJS100Jobs} />
 
 ## Infos
 
